# llm-flow

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
configs/: config.yaml
configs/flow/: README.md  about_market.yaml  buy_sell.yaml  classify_ads.yaml  fix_dates.yaml  old_news.yaml  sentiment.yaml
configs/model/: README.md  fin_r1.yaml
configs/prompts/: README.md  default.yaml  fix_dates.yaml  old_news.yaml
llm_flow/: __main__.py  logging_setup.py
src/llm_flow/: __main__.py  io.py  llm.py  logging_setup.py  pipeline.py  utils.py
src/llm_pipeline/: __main__.py  io.py  llm.py  logging_setup.py  main.py  pipeline.py  utils.py
