[project]
name = "llm-flow"
version = "0.1.0"
description = "Design and run multi-step classification and reasoning pipelines on large-scale datasets."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Alexander Brady" }
]
license = { file = "LICENSE" }
dependencies = [
    "hydra-core>=1.3.2",
    "pandas>=2.3.3",
    "vllm>=0.11.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
]

[project.urls]
github = "https://github.com/alexander-brady/llm-flow"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501"]                    # let the formatter handle wrapping

[tool.ruff.lint.isort]
known-first-party = ["vl_saliency"]

[tool.mypy]
python_version = "3.13"
files = ["llm_flow"]
exclude = ["\\.venv", "env", "build", "dist"]
follow_imports = "skip"  # don't analyze third-party libs
ignore_missing_imports = true
